[package]
name = "sozu-client"
homepage = "https://github.com/CleverCloud/sozu-client"
description = "This library provides a client to interact with Sōzu."
documentation = "https://github.com/CleverCloud/sozu-client/blob/main/README.md"
version = "0.4.0"
edition = "2021"
rust-version = "1.74.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.77"
bb8 = "^0.8.1"
config = "^0.14.0"
mio = { version = "^0.8.10", default-features = false, features = ["os-poll", "os-ext", "net"] }
serde_json = "^1.0.111"
sozu-command-lib = "^1.0.0"

tempdir = "^0.3.7"
thiserror = "^1.0.56"
tokio = { version = "^1.35.1", features = ["time", "fs", "io-util"] }
tracing = "^0.1.40"

[features]
default = []

unpooled = ["tokio/sync"]
