[package]
name = "sozu-client"
repository = "https://github.com/CleverCloud/sozu-client"
description = "This library provides a client to interact with Sōzu."
documentation = "https://github.com/CleverCloud/sozu-client/blob/main/README.md"
version = "0.5.0"
edition = "2024"
rust-version = "1.88.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.89"
bb8 = "^0.9.1"
config = "^0.15.23"
mio = { version = "^1.2.1", default-features = false, features = ["os-poll", "os-ext", "net"] }
serde_json = "^1.0.150"
sozu-command-lib = "2.1.0"

tempfile = "^3.27.0"
thiserror = "^2.0.18"
tokio = { version = "^1.52.3", features = ["time", "fs", "io-util"] }
tracing = "^0.1.44"

[features]
default = []

unpooled = ["tokio/sync"]
